qt6/gen_qaccessible.nim

proc fcQAccessibleTextUpdateEvent_override_virtual_accessibleInterface(self: pointer, slot: int) {.importc: "QAccessibleTextUpdateEvent_override_virtual_accessibleInterface".}
proc fcQAccessibleTextUpdateEvent_delete(self: pointer) {.importc: "QAccessibleTextUpdateEvent_delete".}
proc fcQAccessibleValueChangeEvent_new(obj: pointer, val: pointer): ptr cQAccessibleValueChangeEvent {.importc: "QAccessibleValueChangeEvent_new".}
proc fcQAccessibleValueChangeEvent_new2(iface: pointer, val: pointer): ptr cQAccessibleValueChangeEvent {.importc: "QAccessibleValueChangeEvent_new2".}
proc fcQAccessibleValueChangeEvent_setValue(self: pointer, val: pointer): void {.importc: "QAccessibleValueChangeEvent_setValue".}
proc fcQAccessibleValueChangeEvent_value(self: pointer, ): pointer {.importc: "QAccessibleValueChangeEvent_value".}
proc fQAccessibleValueChangeEvent_virtualbase_accessibleInterface(self: pointer, ): pointer{.importc: "QAccessibleValueChangeEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleValueChangeEvent_override_virtual_accessibleInterface(self: pointer, slot: int) {.importc: "QAccessibleValueChangeEvent_override_virtual_accessibleInterface".}
proc fcQAccessibleValueChangeEvent_delete(self: pointer) {.importc: "QAccessibleValueChangeEvent_delete".}
proc fcQAccessibleTableModelChangeEvent_new(obj: pointer, changeType: cint): ptr cQAccessibleTableModelChangeEvent {.importc: "QAccessibleTableModelChangeEvent_new".}
proc fcQAccessibleTableModelChangeEvent_new2(iface: pointer, changeType: cint): ptr cQAccessibleTableModelChangeEvent {.importc: "QAccessibleTableModelChangeEvent_new2".}
proc fcQAccessibleTableModelChangeEvent_setModelChangeType(self: pointer, changeType: cint): void {.importc: "QAccessibleTableModelChangeEvent_setModelChangeType".}
proc fcQAccessibleTableModelChangeEvent_modelChangeType(self: pointer, ): cint {.importc: "QAccessibleTableModelChangeEvent_modelChangeType".}
proc fcQAccessibleTableModelChangeEvent_setFirstRow(self: pointer, row: cint): void {.importc: "QAccessibleTableModelChangeEvent_setFirstRow".}
proc fcQAccessibleTableModelChangeEvent_setFirstColumn(self: pointer, col: cint): void {.importc: "QAccessibleTableModelChangeEvent_setFirstColumn".}
proc fcQAccessibleTableModelChangeEvent_setLastRow(self: pointer, row: cint): void {.importc: "QAccessibleTableModelChangeEvent_setLastRow".}
proc fcQAccessibleTableModelChangeEvent_setLastColumn(self: pointer, col: cint): void {.importc: "QAccessibleTableModelChangeEvent_setLastColumn".}
proc fcQAccessibleTableModelChangeEvent_firstRow(self: pointer, ): cint {.importc: "QAccessibleTableModelChangeEvent_firstRow".}
proc fcQAccessibleTableModelChangeEvent_firstColumn(self: pointer, ): cint {.importc: "QAccessibleTableModelChangeEvent_firstColumn".}
proc fcQAccessibleTableModelChangeEvent_lastRow(self: pointer, ): cint {.importc: "QAccessibleTableModelChangeEvent_lastRow".}
proc fcQAccessibleTableModelChangeEvent_lastColumn(self: pointer, ): cint {.importc: "QAccessibleTableModelChangeEvent_lastColumn".}
proc fQAccessibleTableModelChangeEvent_virtualbase_accessibleInterface(self: pointer, ): pointer{.importc: "QAccessibleTableModelChangeEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleTableModelChangeEvent_override_virtual_accessibleInterface(self: pointer, slot: int) {.importc: "QAccessibleTableModelChangeEvent_override_virtual_accessibleInterface".}
proc fcQAccessibleTableModelChangeEvent_delete(self: pointer) {.importc: "QAccessibleTableModelChangeEvent_delete".}


func init*(T: type QAccessibleInterface, h: ptr cQAccessibleInterface): QAccessibleInterface =
  T(h: h)
proc isValid*(self: QAccessibleInterface, ): bool =

  fcQAccessibleInterface_isValid(self.h)

proc objectX*(self: QAccessibleInterface, ): gen_qobject.QObject =

  gen_qobject.QObject(h: fcQAccessibleInterface_objectX(self.h))

proc window*(self: QAccessibleInterface, ): gen_qwindow.QWindow =

  gen_qwindow.QWindow(h: fcQAccessibleInterface_window(self.h))

proc relations*(self: QAccessibleInterface, match: gen_qaccessible_base.QAccessibleRelationFlag): seq[tuple[first: QAccessibleInterface, second: gen_qaccessible_base.QAccessibleRelationFlag]] =

  var v_ma = fcQAccessibleInterface_relations(self.h, cint(match))
  var vx_ret = newSeq[tuple[first: QAccessibleInterface, second: gen_qaccessible_base.QAccessibleRelationFlag]](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_map]](v_ma.data)
  for i in 0 ..< v_ma.len:
    var vx_lv_mm = v_outCast[i]
    var vx_lv_First_CArray = cast[ptr UncheckedArray[pointer]](vx_lv_mm.keys)
    var vx_lv_Second_CArray = cast[ptr UncheckedArray[cint]](vx_lv_mm.values)
    var vx_lv_entry_First = QAccessibleInterface(h: vx_lv_First_CArray[0])

    var vx_lv_entry_Second = gen_qaccessible_base.QAccessibleRelationFlag(vx_lv_Second_CArray[0])

    vx_ret[i] = (first: vx_lv_entry_First , second: vx_lv_entry_Second )
  vx_ret

proc focusChild*(self: QAccessibleInterface, ): QAccessibleInterface =

  QAccessibleInterface(h: fcQAccessibleInterface_focusChild(self.h))

proc childAt*(self: QAccessibleInterface, x: cint, y: cint): QAccessibleInterface =

  QAccessibleInterface(h: fcQAccessibleInterface_childAt(self.h, x, y))

proc parent*(self: QAccessibleInterface, ): QAccessibleInterface =

  QAccessibleInterface(h: fcQAccessibleInterface_parent(self.h))

proc child*(self: QAccessibleInterface, index: cint): QAccessibleInterface =

  QAccessibleInterface(h: fcQAccessibleInterface_child(self.h, index))

proc childCount*(self: QAccessibleInterface, ): cint =

  fcQAccessibleInterface_childCount(self.h)

proc indexOfChild*(self: QAccessibleInterface, param1: QAccessibleInterface): cint =

  fcQAccessibleInterface_indexOfChild(self.h, param1.h)

proc text*(self: QAccessibleInterface, t: gen_qaccessible_base.QAccessibleText): string =

  let v_ms = fcQAccessibleInterface_text(self.h, cint(t))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setText*(self: QAccessibleInterface, t: gen_qaccessible_base.QAccessibleText, text: string): void =

  fcQAccessibleInterface_setText(self.h, cint(t), struct_miqt_string(data: text, len: csize_t(len(text))))

proc rect*(self: QAccessibleInterface, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQAccessibleInterface_rect(self.h))

proc role*(self: QAccessibleInterface, ): gen_qaccessible_base.QAccessibleRole =

  gen_qaccessible_base.QAccessibleRole(fcQAccessibleInterface_role(self.h))

proc state*(self: QAccessibleInterface, ): gen_qaccessible_base.QAccessibleState =

  gen_qaccessible_base.QAccessibleState(h: fcQAccessibleInterface_state(self.h))

proc foregroundColor*(self: QAccessibleInterface, ): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQAccessibleInterface_foregroundColor(self.h))

proc backgroundColor*(self: QAccessibleInterface, ): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQAccessibleInterface_backgroundColor(self.h))

proc textInterface*(self: QAccessibleInterface, ): QAccessibleTextInterface =

  QAccessibleTextInterface(h: fcQAccessibleInterface_textInterface(self.h))

proc editableTextInterface*(self: QAccessibleInterface, ): QAccessibleEditableTextInterface =

  QAccessibleEditableTextInterface(h: fcQAccessibleInterface_editableTextInterface(self.h))

proc valueInterface*(self: QAccessibleInterface, ): QAccessibleValueInterface =

  QAccessibleValueInterface(h: fcQAccessibleInterface_valueInterface(self.h))

proc actionInterface*(self: QAccessibleInterface, ): QAccessibleActionInterface =

  QAccessibleActionInterface(h: fcQAccessibleInterface_actionInterface(self.h))

proc imageInterface*(self: QAccessibleInterface, ): QAccessibleImageInterface =

  QAccessibleImageInterface(h: fcQAccessibleInterface_imageInterface(self.h))

proc tableInterface*(self: QAccessibleInterface, ): QAccessibleTableInterface =

  QAccessibleTableInterface(h: fcQAccessibleInterface_tableInterface(self.h))

proc tableCellInterface*(self: QAccessibleInterface, ): QAccessibleTableCellInterface =

  QAccessibleTableCellInterface(h: fcQAccessibleInterface_tableCellInterface(self.h))

proc hyperlinkInterface*(self: QAccessibleInterface, ): QAccessibleHyperlinkInterface =

  QAccessibleHyperlinkInterface(h: fcQAccessibleInterface_hyperlinkInterface(self.h))

proc virtualHook*(self: QAccessibleInterface, id: cint, data: pointer): void =

  fcQAccessibleInterface_virtualHook(self.h, id, data)

proc interfaceCast*(self: QAccessibleInterface, param1: gen_qaccessible_base.QAccessibleInterfaceType): pointer =

  fcQAccessibleInterface_interfaceCast(self.h, cint(param1))


func init*(T: type QAccessibleTextInterface, h: ptr cQAccessibleTextInterface): QAccessibleTextInterface =
  T(h: h)
proc selection*(self: QAccessibleTextInterface, selectionIndex: cint, startOffset: ptr cint, endOffset: ptr cint): void =

  fcQAccessibleTextInterface_selection(self.h, selectionIndex, startOffset, endOffset)

proc selectionCount*(self: QAccessibleTextInterface, ): cint =

  fcQAccessibleTextInterface_selectionCount(self.h)

proc addSelection*(self: QAccessibleTextInterface, startOffset: cint, endOffset: cint): void =

  fcQAccessibleTextInterface_addSelection(self.h, startOffset, endOffset)

proc removeSelection*(self: QAccessibleTextInterface, selectionIndex: cint): void =

  fcQAccessibleTextInterface_removeSelection(self.h, selectionIndex)

proc setSelection*(self: QAccessibleTextInterface, selectionIndex: cint, startOffset: cint, endOffset: cint): void =

  fcQAccessibleTextInterface_setSelection(self.h, selectionIndex, startOffset, endOffset)

proc cursorPosition*(self: QAccessibleTextInterface, ): cint =

  fcQAccessibleTextInterface_cursorPosition(self.h)

proc setCursorPosition*(self: QAccessibleTextInterface, position: cint): void =

  fcQAccessibleTextInterface_setCursorPosition(self.h, position)

proc text*(self: QAccessibleTextInterface, startOffset: cint, endOffset: cint): string =

  let v_ms = fcQAccessibleTextInterface_text(self.h, startOffset, endOffset)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc textBeforeOffset*(self: QAccessibleTextInterface, offset: cint, boundaryType: gen_qaccessible_base.QAccessibleTextBoundaryType, startOffset: ptr cint, endOffset: ptr cint): string =

  let v_ms = fcQAccessibleTextInterface_textBeforeOffset(self.h, offset, cint(boundaryType), startOffset, endOffset)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc textAfterOffset*(self: QAccessibleTextInterface, offset: cint, boundaryType: gen_qaccessible_base.QAccessibleTextBoundaryType, startOffset: ptr cint, endOffset: ptr cint): string =

  let v_ms = fcQAccessibleTextInterface_textAfterOffset(self.h, offset, cint(boundaryType), startOffset, endOffset)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc textAtOffset*(self: QAccessibleTextInterface, offset: cint, boundaryType: gen_qaccessible_base.QAccessibleTextBoundaryType, startOffset: ptr cint, endOffset: ptr cint): string =

  let v_ms = fcQAccessibleTextInterface_textAtOffset(self.h, offset, cint(boundaryType), startOffset, endOffset)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc characterCount*(self: QAccessibleTextInterface, ): cint =

  fcQAccessibleTextInterface_characterCount(self.h)

proc characterRect*(self: QAccessibleTextInterface, offset: cint): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQAccessibleTextInterface_characterRect(self.h, offset))

proc offsetAtPoint*(self: QAccessibleTextInterface, point: gen_qpoint.QPoint): cint =

  fcQAccessibleTextInterface_offsetAtPoint(self.h, point.h)

proc scrollToSubstring*(self: QAccessibleTextInterface, startIndex: cint, endIndex: cint): void =

  fcQAccessibleTextInterface_scrollToSubstring(self.h, startIndex, endIndex)
